# mdast2minimad

./: Cargo.toml  README.md  build.rs
examples/: compare_asts.rs  display.rs
md_sources/: basic.md
md_sources/paragraphs/: multiple.md  single_line.md
src/: lib.rs
tests/: check_parses.rs  parse.rs  update_sources.py
tests/sources/: thematic_break.md
tests/sources/code/: long.md  simple.md  with_lang.md  with_lang_and_meta.md
tests/sources/formatting/: bold.md  code.md  italic.md  mixed.md  strikethrougth.md
tests/sources/lists/: long_items.md  nested.md  simple.md
tests/sources/paragraphs/: multiline.md
tests/sources/tables/: simple.md
