[package]
name = "mdast2minimad"
version = "0.1.0"
edition = "2021"

[dependencies]
minimad = "0.13.1"
markdown = "1.0.0-alpha.20"
derive_more = { version = "1.0.0", features = ["error", "display", "from", "debug"] }

[dev-dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
